# FORGE

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  NP_FIX_TODO.md  README.md  Session_Summary_22_PyBaMM_Pilot.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run_pouch_candidates.py  setup_forge_env.cmd  start_forge_api.cmd  start_forge_app.cmd
.github/workflows/: ci.yml
data/reference/: a123_amp20.json  byd_blade_138ah.json  catl_100ah_lfp.json  catl_150ah_lfp.json  catl_161ah_lfp.json  eve_lf280k_prismatic.json  generic_21700.json  generic_4680.json  kokam_ecker2015.json  lg_e66a.json  lg_e78_pouch.json  lg_m50_21700.json  lg_m58t_21700.json  lg_mj1_18650.json  molicel_p42a_21700.json  molicel_p45b_21700.json  panasonic_2170_nca.json  samsung_30q_18650.json  samsung_40t_21700.json  samsung_50e_21700.json  samsung_sdi_94ah.json  sk_e556_pouch.json  tesla_4680.json  v1_pouch.json  v1_prismatic.json
demos/n8n/: README.md  axiom_batch_evaluation.json  axiom_supervised_vs_unsupervised.json
docker/nginx/: nginx-http-only.conf  nginx-ssl.conf  nginx.conf
docs/: ANALYSIS_Exp1_Exp2_Results.md  Archive_Runs_and_Dashboard_Selector.md  BUILD_WEEK_LOG.md  BUILD_WEEK_SPEC.md  CODEBASE_MAP.md  EXPERIMENT_PROMPTS.md  FIX_Prismatic_Schema_Mismatch.md  ML_AUTORESEARCH_EXPLAINED.md  P1_Translation_Layer_and_PyBaMM_Runner.md  P2_Batch_Generator_and_Sobol_Screening.md  P3_Dataset_Builder_and_Pilot_Orchestration.md  PLAN_ML_Dashboard_Enhancements.md  PLAN_Phase1_Instrumentation.md  PLAN_Surrogate_Playground.md  PROMPT_Fix_Prismatic_Conversion.md  Run_002_Autoresearch_PyBaMM.md  Run_003_Autoresearch_PyBaMM_3k.md  Run_004_Optuna_Comparison.md  STATUS_Experiment_Pipeline.md  STATUS_Prismatic_Fix.md  api-reference.md  architecture.md  axiom.md  byd_blade_138ah_archetype.json  catl_qilin_archetype.json  development.md  engine.md  index.md  lg_e66a_archetype.json  ml-layer.md  openai-build-week.md  samsung_21700_50g_archetype.json  samsung_sdi_94ah_archetype.json  tesla_4680_archetype.json
experiments/: README.md
forge/api/: __init__.py  app.py  deps.py
forge/axiom/: __init__.py
forge/cli/: __init__.py  main.py
forge/experiments/: FAILURE_MODE_ANALYSIS.md  FINETUNING_PRECHECK_REPORT.md  LOCAL_PILOT_REPORT.md  NP_AUDIT_RESULTS_2026-06-27.md  THESIS_RESULTS_REPORT.md  __init__.py  corpus_config.py  corpus_statistics.py  experiment_config.py  generate_corpus.py  gpu_monitor.py  prompt_corpus_v1.json  run_experiments.py  run_local_full.sh  run_multimodel_full.sh
forge/export/: __init__.py  csv_export.py  json_export.py
forge/finetune/: FINETUNING_DIAGNOSTIC_REPORT.md  GEMMA4_FINETUNING_REPORT.md  STAGE4_SETUP_REPORT.md  export_to_ollama.py  run_training.sh  train.py  train_gemma4.py
forge/gui/: app.py  axiom_pipeline.py  build_week_demo.py  streamlit_app.py  verified_replay.py
forge/integration/: README.md  __init__.py
forge/materials/: __init__.py
forge/ml/: README.md  __init__.py  surrogate_inference.py
provenance_runs/20260624_214202Z_nmc111_pouch/: BUNDLE_SHA256.txt  design_assumptions.md  manifest.json  system_prompt_pouch.sha256  system_prompt_pouch.txt
provenance_runs/20260624_224042Z_nmc111_pouch/: BUNDLE_SHA256.txt  (+2 more)
tests/: test_pybamm_custom_params.py  test_tier1_integration.py
(+421 files in other folders)
