[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forge"
version = "0.1.0"
description = "FORGE — Formal Output Regulation for Generative Engineering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cristian"}
]

dependencies = [
    "pybamm>=24.1",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
cad = [
    "cadquery>=2.4",
    "build123d>=0.5",
]
ml = [
    "torch>=2.0",
    "pybop>=24.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
all = ["forge[gui,cad,ml,dev]"]

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: marks tests requiring live API access (deselected by default)",
]
addopts = "-m 'not live'"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
