[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "FORGE - Formal Output Regulation for Generative Engineering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Cristian" },
]

dependencies = [
    "pybamm>=24.1",
    "numpy>=1.24",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
cad = [
    "cadquery>=2.4",
    "build123d>=0.5",
]
ml = [
    "torch>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pybop>=24.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.24.0",
]
llm = [
    "anthropic",
    "requests",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
all = ["forge[gui,cad,ml,dev,llm]"]

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: marks tests requiring live API access (deselected by default)",
]
addopts = "-m 'not live'"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "_source",
    ".git",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["forge"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
ignore_errors = true
no_implicit_optional = false
disable_error_code = ["import-untyped"]
exclude = [
    "_source/",
    "tests/",
    "docs/",
    "experiments/",
    "demos/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "forge.ml.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
